--- a/Cours/main.tex
+++ b/Cours/main.tex
@@ -14,6 +14,7 @@
 \usepackage{fancyhdr}
 \usepackage{tcolorbox}
 \usepackage[dvipsnames]{xcolor}
+\usepackage{morewrites}
 
 \geometry{a4paper, left=20mm, right=20mm, top=20mm, bottom=20mm}
 
@@ -56,4 +57,5 @@
     \subfile{Chapitre_13/chapitre13.tex}
     \subfile{Chapitre_14/chapitre14.tex}
     \subfile{Chapitre_15/chapitre15.tex}
+    \subfile{Chapitre_16/chapitre16.tex}
 \end{document}
