Added new \setsection command + Updated main.pdf

--- a/Cours/main.tex
+++ b/Cours/main.tex
@@ -21,6 +21,8 @@
 \definecolor{darkgreen}{RGB}{6, 64, 43}
 \definecolor{lightblue}{RGB}{87, 185, 255}
 
+\newcommand{\setsection}[1]{\setcounter{section}{#1}}
+
 \pagestyle{fancy}
 \fancyhead
 \fancyfoot
