--- a/Colles/Semaine 13/main.tex
+++ b/Colles/Semaine 13/main.tex
@@ -135,7 +135,8 @@ Or, par théorème d'opérations :
     \lim_{n\to +\infty} v_n - \lim_{n\to +\infty} u_n = \lim_{n\to +\infty} (v_n - u_n) = 0
 \end{align*}
 
-\section{Exercices types}
+
+\subsection{Exercices types}
 \begin{tcolorbox}[title=Exercice 1, title filled=false, colframe=darkgreen, colback=darkgreen!10!white]
     Déterminer l'expression explicite de la suite de Fibonnaci, définie par
     \begin{align*}
@@ -164,5 +165,138 @@ Or, par théorème d'opérations :
         \end{enumerate}
     \end{enumerate}
 \end{tcolorbox}
+
+
+\section{Limites et continuité}
+\subsection{Questions de cours}
+\subsubsection{Enoncer et démontrer le théorème de caractérisation séquentielle de la limite d'une fonction}
+\begin{tcolorbox}[title=Théorème 15.34, title filled=false, colframe=orange, colback=orange!10!white]
+    Soit $f:X\to \mathbb{R}$ une fonction et $a \in \overline{X}$ et $\ell \in \overline{\mathbb{R}}$. Sont équivalentes : 
+    \begin{enumerate}
+        \item $\lim\limits_a f = \ell \Leftrightarrow \forall u_n \to a, \lim f(u_n) = \ell \text{ ($= f(\lim u_n)$)}$
+        \item Pour toute suite $(u_n)$ de limite $a$ à valeurs dans $X$, la suite $(f(u_n))$ a pour limite $\ell$. 
+    \end{enumerate}
+\end{tcolorbox}
+
+$\boxed{1 \Rightarrow 2}$ \\
+On suppose que $\lim\limits_a f = \ell$. \\
+Soit $(u_n) \in X^{\mathbb{N}}$ avec $u_n \underset{n \to +\infty}{\longrightarrow} a$. \\
+Soit $V \in \mathcal{V}(\ell)$. On choisit $U \in \mathcal{V}(a)$ tel que : 
+\begin{align*}
+    f(U \cap X) \subset V \text{ ($\lim\limits_a f = \ell$)}
+\end{align*}
+Comme $u_n \underset{n \to +\infty}{\longrightarrow} a$, on choisit $N \in \mathbb{N}$ tel que : 
+\begin{align*}
+    \forall n \geq N, u_n \in U \cap X
+\end{align*}
+Donc : 
+\begin{align*}
+    \forall n \geq N, f(u_n) \in V
+\end{align*}
+Donc : 
+\begin{align*}
+    f(u_n) \underset{n \to +\infty}{\longrightarrow} \ell
+\end{align*} \\
+
+$\boxed{1 \Leftarrow 2}$ \\
+Par contraposée. On suppose que $f$ n'admet pas $\ell$ comme limite en $a$. Pour tout $n \in \mathbb{N}$, on note : 
+\begin{align*}
+    V_n = \begin{cases}
+        ]a - \frac{1}{n+1}, a + \frac{1}{n+1}[ \text{ si $a \in \mathbb{R}$} \\
+        [n, +\infty[ \text{ si $a = +\infty$} \\
+        ]-\infty, -n] \text{ si $a = -\infty$}
+    \end{cases}
+\end{align*}
+Par définition, il existe $W \in \mathcal{V}(\ell)$ tel que pour tout $V \in \mathcal{V}(a)$, il existe $x \in V \cap X$ et $f(x) \neq W$. \\
+Pour tout $n \in \mathbb{N}$, on choisit $x_n \in V_n \cap X$ tel que $f(x_n) \neq W$. \\
+Par construction : 
+\begin{align*}
+    (x_n) \in X^\mathbb{N}, x_n \underset{n \to +\infty}{\longrightarrow} a \text{ et } f(x_n) \cancel{\underset{n \to +\infty}{\longrightarrow}} \ell
+\end{align*}
+
+\subsubsection{Enoncer et démontrer le théorème de Heine}
+\begin{tcolorbox}[title=Théorème 15.65, title filled=false, colframe=orange, colback=orange!10!white]
+    Une fonction continue sur un segment est uniformément continue sur ce segment. 
+\end{tcolorbox}
+
+\noindent \underline{Rappel :}
+\begin{align*}
+    C^0(I) &: \forall x \in I, \forall \epsilon > 0, \exists \eta > 0, \forall y \in I, |x-y| < \eta \Rightarrow |f(x) - f(y)| < \epsilon \\
+    Cu(I) &: \forall \epsilon > 0, \exists \eta > 0, \forall (x,y) \in I^2, |x-y| < \eta \Rightarrow |f(x) - f(y)| < \epsilon
+\end{align*}
+On raisonne par l'absurde. Soit $f$ continue sur $[a,b]$ mais non uniformément continue sur $[a,b]$. \\
+On choisit $\epsilon$ tel que : 
+\begin{align*}
+    \forall \eta > 0, \exists (x, y) \in [a,b]^2, |x - y| < \eta \text{ et } |f(x) - f(y)| \geq \epsilon
+\end{align*}
+Ainsi, pour tout $b \in \mathbb{N}^*$, on choisit un couple $(x_n, y_n) \in [a,b]^2$ tel que : 
+\begin{align*}
+    |x_n - y_n| < \frac{1}{n} \text{ et } \underbrace{|f(x_n) - f(y_n)|}_{(*)} \geq \epsilon
+\end{align*}
+En particulier $(x_n)$ est bornée donc d'après le théorème de Bolzano-Weierstrass, on en extrait $(x_{\varphi(n)})$ suite convergente vers $\ell$. \\
+D'après le TCILPPL, $\ell \in [a,b]$. \\
+Comme : 
+\begin{align*}
+    \forall n \in \mathbb{N}, |x_{\varphi(n)} - y_{\varphi(n)}| < \frac{1}{\varphi(n)} \underset{n \to +\infty}{\longrightarrow} 0
+\end{align*}
+Alors : 
+\begin{align*}
+    y_{\varphi(n)} \underset{n \to +\infty}{\longrightarrow} \ell
+\end{align*}
+Par continuité : 
+\begin{align*}
+    f(x_{\varphi(n)}) \underset{n \to +\infty}{\longrightarrow} f(\ell) \text{ et } f(y_{\varphi(n)}) \underset{n \to +\infty}{\longrightarrow} f(\ell)
+\end{align*}
+Donc par opération : 
+\begin{align*}
+    |f(x_{\varphi(n)}) - f(y_{\varphi(n)})| \underset{n \to +\infty}{\longrightarrow} 0
+\end{align*}
+Absurde d'après $(*)$. 
+
+\subsubsection{Démontrer que l'image continue d'un compact est compact. Démontrer qu'une fonction continue sur un intervalle est injective si et seulement si elle est strictement monotone}
+\begin{tcolorbox}[title=Lemme 15.68, title filled=false, colframe=orange, colback=orange!10!white]
+    L'image continue d'un compact est compact. 
+\end{tcolorbox}
+
+\noindent Soit $I$ un segment, donc un intervalle. \\
+Comme $f$ est continue sur $I$, $f(I)$ est un intervalle (TVI v3). \\
+Montrons que $f(I)$ est compact. \\
+Soit $(y_n) \in f(I)^{\mathbb{N}}$. Pour tout $n \in \mathbb{N}$, soit $x_n \in I$ tel que : 
+\begin{align*}
+    y_n = f(x_n)
+\end{align*}
+Or $I$ est compact (15.67), on choisit : 
+\begin{align*}
+    x_{\varphi(n)} \underset{n \to +\infty}{\longrightarrow} \ell \in I
+\end{align*}
+$y_{\varphi(n)} \underset{n \to +\infty}{\longrightarrow} f(\ell)$ car $f$ est continue sur $I$. 
+
+\begin{tcolorbox}[title=Théorème 15.72, title filled=false, colframe=orange, colback=orange!10!white]
+    Soit $I$ un intervalle et $f$ une fonction continue sur $I$. Alors $f$ est injective si et seulement si $f$ est strictement monotone. 
+\end{tcolorbox}
+
+$\boxed{\Leftarrow}$ \\
+RAS \\ \\
+
+$\boxed{\Rightarrow}$ \\
+Supposons $f$ non strictement monotone. \\
+On peut supposer qu'il existe alors : 
+\begin{align*}
+    x < y < z
+\end{align*}
+tels que $f(x) < f(y)$ et $f(z) < f(y)$. \\
+Soit :
+\begin{align*}
+    \lambda = \frac{f(y) + \max(f(y), f(z))}{2} &\in ]f(x), f(y)[ \\
+    &\in ]f(z), f(y)[
+\end{align*}
+Par continuité de $f$ sur les intervalles $]x, y[$ et $]y, z[$, il existe $\alpha \in ]x, y[$ et $\beta \in ]y, z[$ tels que : 
+\begin{align*}
+    f(\alpha) = \lambda = f(\beta)
+\end{align*}
+Donc $f$ n'est pas injective. 
+
+
+\subsection{Exercices types}
 
 \end{document}
