Enoncés des exercices types - chapitre 15

--- a/Colles/Semaine 13/main.tex
+++ b/Colles/Semaine 13/main.tex
@@ -298,5 +298,23 @@ Donc $f$ n'est pas injective.
 
 
 \subsection{Exercices types}
+\begin{tcolorbox}[title=Exercice 1, title filled=false, colframe=darkgreen, colback=darkgreen!10!white]
+    Soit $f$ et $g$ dans $\mathcal{C}(\mathbb{R}, \mathbb{R})$ telles que $\left. f \right|_{\mathbb{Q}} = \left. g \right|_{\mathbb{Q}}$. Montrer alors que $f$ et $g$ sont égales sur $\mathbb{R}$ tout entier. 
+\end{tcolorbox}
+
+\begin{tcolorbox}[title=Exercice 2, title filled=false, colframe=darkgreen, colback=darkgreen!10!white]
+    Soit $f \in \mathcal{C}([a, b], \mathbb{R})$. On suppose que
+    $$f([a, b]) \subset [a, b] \text{ ou } [a, b] \subset f([a, b])$$
+    Montrer qu'alors $f$ possède un point fixe. 
+\end{tcolorbox}
+
+\begin{tcolorbox}[title=Exercice 3, title filled=false, colframe=darkgreen, colback=darkgreen!10!white]
+    Soit $(f, g) \in \mathcal{C}([a, b], \mathbb{R})$. On suppose que
+    $$f([a, b]) \subset [a, b] \text{ et } g([a, b]) \subset [a, b] \text{ et } f \circ g = g \circ f$$
+    \begin{enumerate}
+        \item Montrer que si $f > g$ sur l'intervalle $[a, b]$, il existe $K > 0$ tel que pour tout $n \in \mathbb{N}, f^n \geq g^n + nK$ sur $[a, b]$, où $f^n$ désigne la composée. 
+        \item En déduire que les graphes de $f$ et $g$ possèdent un point d'intersection. 
+    \end{enumerate}
+\end{tcolorbox}
 
 \end{document}
