Fixed typos & started chaptre 18

--- a/Cours/main.tex
+++ b/Cours/main.tex
@@ -61,4 +61,5 @@
     \subfile{Chapitre_15/chapitre15.tex}
     \subfile{Chapitre_16/chapitre16.tex}
     \subfile{Chapitre_17/chapitre17.tex}
+    \subfile{Chapitre_18/chapitre18.tex}
 \end{document}
