Refreshed main.tex & demo position du graphe d'une fonction convexe par rapport à ses sécantes

--- a/Cours/main.tex
+++ b/Cours/main.tex
@@ -62,4 +62,5 @@
     \subfile{Chapitre_16/chapitre16.tex}
     \subfile{Chapitre_17/chapitre17.tex}
     \subfile{Chapitre_18/chapitre18.tex}
+    \subfile{Chapitre_19/chapitre19.tex}
 \end{document}
