Refreshed main.tex + Démo Propriétés du 0, régularité

--- a/Cours/main.tex
+++ b/Cours/main.tex
@@ -63,4 +63,5 @@
     \subfile{Chapitre_17/chapitre17.tex}
     \subfile{Chapitre_18/chapitre18.tex}
     \subfile{Chapitre_19/chapitre19.tex}
+    \subfile{Chapitre_20/chapitre20.tex}
 \end{document}
