Added next chapters skeleton + Updated main.tex

--- a/Cours/main.tex
+++ b/Cours/main.tex
@@ -64,4 +64,20 @@
     \subfile{Chapitre_18/chapitre18.tex}
     \subfile{Chapitre_19/chapitre19.tex}
     \subfile{Chapitre_20/chapitre20.tex}
+    \subfile{Chapitre_21/chapitre21.tex}
+    \subfile{Chapitre_22/chapitre22.tex}
+    \subfile{Chapitre_23/chapitre23.tex}
+    \subfile{Chapitre_24/chapitre24.tex}
+    \subfile{Chapitre_25/chapitre25.tex}
+    \subfile{Chapitre_26/chapitre26.tex}
+    \subfile{Chapitre_27/chapitre27.tex}
+    \subfile{Chapitre_28/chapitre28.tex}
+    \subfile{Chapitre_29/chapitre29.tex}
+    \subfile{Chapitre_30/chapitre30.tex}
+    \subfile{Chapitre_31/chapitre31.tex}
+    \subfile{Chapitre_32/chapitre32.tex}
+    \subfile{Chapitre_33/chapitre33.tex}
+    \subfile{Chapitre_34/chapitre34.tex}
+    \subfile{Chapitre_35/chapitre35.tex}
+    \subfile{Chapitre_36/chapitre36.tex}
 \end{document}
