New colors & Updated main

--- a/Cours/main.tex
+++ b/Cours/main.tex
@@ -18,8 +18,11 @@
 
 \geometry{a4paper, left=20mm, right=20mm, top=20mm, bottom=20mm}
 
-\definecolor{darkgreen}{RGB}{6, 64, 43}
-\definecolor{lightblue}{RGB}{87, 185, 255}
+\definecolor{darkgreen}{RGB}{159 212, 163}
+\definecolor{lightblue}{RGB}{136, 174, 208}
+\definecolor{lightred}{RGB}{236, 83, 83}
+\definecolor{lightpurple}{RGB}{177, 156, 217}
+\definecolor{orange}{RGB}{255, 150, 79}
 
 \newcommand{\setsection}[1]{\setcounter{section}{#1}}
 
